# VoxCPM2-TTS-Server

./: .env.example  .gitattributes  .gitignore  NOTICE  README.md  config.yaml  pyproject.toml  requirements.txt
scripts/: smoke_test.py  tune.py
systemd/: voxcpm-tts.service
voxcpm_tts/: __init__.py  __main__.py  config.py  engine.py  server.py
